feat(config): 建立設定治理層並型別化 app 設定